# FutORAMcpp

./: CMakeLists.txt
include/: Block.h  ByteOperations.h  Hashtable.h  Oram.h  OramInterface.h  RandForOramInterface.h  RandomForOram.h  ThresholdGenerator.h  UntrustedStorageInterface.h  config.h  cuckoo_hash.h  cuckoohash.h  localRam.h  obliviousSort.h  tests.h
real_oram/: config.h
real_oram/RAM/: local_RAM.cpp  local_RAM.h
real_oram/utils/: byte_operations.cpp
src/: Block.cpp  ByteOperations.cpp  CMakeCache.txt  Config.cpp  Hashtable.cpp  ORAM.cpp  build.ninja  cmake_install.cmake  cuckoo_hash.cpp  localRam.cpp  main.cpp  tempCodeRunnerFile.cpp  tests.cpp
